--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first github </title>
+    <link rel="stylesheet" href="blog.css">
 </head>
 <body>
+    <div>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit eius, dignissimos, maxime debitis fuga iure voluptatem, delectus ullam repudiandae natus laudantium nisi omnis quae at libero vero sapiente animi veniam!</p>
+</div>
     
 </body>
 </html>
